...
                    )
                }

                Spacer(modifier = Modifier.height(10.dp))

                Text(
                    text = "Características:",
                    fontSize = 12.sp,
                    fontWeight = FontWeight.Bold,
                    color = MaterialTheme.colorScheme.onSurfaceVariant
                )
                Text(
                    text = post.features,
...
